--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -9,7 +9,7 @@ ja:
     failure:
       already_authenticated: 'すでにログインしています。'
       inactive: 'アカウントが有効化されていません。'
-      invalid: "%{authentication_keys} もしくはパスワードが不正です。"
+      invalid: "%{authentication_keys} もしくはパスワードが間違っています。"
       locked: 'あなたのアカウントは凍結されています。'
       last_attempt: 'あなたのアカウントが凍結される前に、複数回の操作がおこなわれています。'
       not_found_in_database: "%{authentication_keys} もしくはパスワードが不正です。"
